--- a/ubakip_r1/Content/custom.css
+++ b/ubakip_r1/Content/custom.css
@@ -14,6 +14,6 @@
   font-family: BuxtonSketch;
 }
 
-.navbar-default .navbar-nav > li > a {
-  color: #98978b;
+.navbar-inverse .navbar-brand {
+  color: #0f0f0f;
 }
