Разделил css на темную и светлую темы

--- a/ubakip_r1/Views/Shared/_Layout.cshtml
+++ b/ubakip_r1/Views/Shared/_Layout.cshtml
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Ubakip.ru</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/bootstrap_light_sandstone.css" rel="stylesheet" type="text/css" />
+	<link href="~/Content/onBootstrap.css" rel="stylesheet" type="text/css" />
 	<link href="~/Content/custom.css" rel="stylesheet" type="text/css" />
+	<link href="~/Content/nonbootstrap.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
