--- a/ubakip/Views/Home/Index.cshtml
+++ b/ubakip/Views/Home/Index.cshtml
@@ -10,10 +10,10 @@
             <button type="button" class="btn  btn-block btn-success " style="">Add post</button>
             <div class="tags-cloud">
                 Popular tags:<br />
-                <div class="tag" ><a href="#">tag1</a></div><span class="badge">12</span>
-                <div class="tag"><a href="#">tag1</a></div><span class="badge">12</span>
-                <div class="tag"><a href="#">tag1</a></div><span class="badge">12</span>
-                <div class="tag"><a href="#">tag1</a></div><span class="badge">12</span>
+                <div class="tag-li"><div class="tag"><a href="#">tag1</a></div><span class="badge">12</span></div> 
+                <div class="tag-li"><div class="tag"><a href="#">tag1</a></div><span class="badge">12</span></div> 
+                <div class="tag-li"><div class="tag"><a href="#">tag1</a></div><span class="badge">12</span></div> 
+                <div class="tag-li"><div class="tag"><a href="#">tag1</a></div><span class="badge">12</span></div> 
 
                 @*<div class="list-group">
                     <a href="#" class="list-group-item"><span class="badge">12</span>First item</a>
