--- a/ubakip/Content/custom.css
+++ b/ubakip/Content/custom.css
@@ -9,7 +9,8 @@
     border-width:1px;
     border-color: black;
     border-radius:10px;*/
-    
+  
+    padding-top:1%;
     margin:auto;
 }
 .sidebar .list-group-item
@@ -67,7 +68,7 @@
     background:#9c9999;
     padding-left:5%;   
     padding-right:5%;
-     display: inline-block;
+    display: inline-block;
     border:solid;
     border-width:1px;
     border-color: black;
@@ -88,6 +89,10 @@
     background:#cccccc;
 }
 
+.tag-li{ 
+    display:initial;  
+     margin:1%;  
+}
 .post{
      border:dashed;
     border-color: transparent;
@@ -163,3 +168,103 @@ div.user-rating
 .comment-text{
   
 }
+
+@media only screen and (min-width: 1024px) {
+    .sidebar
+{
+    /*border:solid;
+    border-width:1px;
+    border-color: black;
+    border-radius:10px;*/
+    padding-top:20%;   
+}
+
+.sidebar .badge{      
+        float:right;
+}
+
+.tag-li{
+   
+    display:inline-block;    
+    width:100%;
+}
+
+}
+
+.search-form .form-group {
+    
+  float: right;
+  /*transition: all 0.35s, border-radius 0s;*/
+  /*width: 32px;*/
+  width:100%;
+  margin-left:auto;
+  margin-top:10px;
+  margin-bottom:0px;
+  height: 32px;
+  background-color: #fff;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+  border-radius: 25px;
+  border: 1px solid #ccc;
+}
+.search-form .form-group input.form-control {
+  padding-right: 20px;
+  border: 0 none;
+  background: transparent;
+  box-shadow: none;
+  display:block;
+}
+.search-form .form-group input.form-control::-webkit-input-placeholder {
+  
+}
+.search-form .form-group input.form-control:-moz-placeholder {
+  /* Firefox 18- */
+ 
+}
+.search-form .form-group input.form-control::-moz-placeholder {
+  /* Firefox 19+ */
+ 
+}
+.search-form .form-group input.form-control:-ms-input-placeholder {
+ 
+}
+.search-form .form-group:hover,
+.search-form .form-group.hover {
+  width: 100%;
+  border-radius: 25px 25px 25px 25px;
+}
+.search-form .form-group span.form-control-feedback {
+  position: absolute;
+  top: -1px;
+  right: -2px;
+  z-index: 2;
+  
+  width: 34px;
+  height: 34px;
+  line-height: 34px;
+  text-align: center;
+  color: #3596e0;
+  font-size: 14px;
+}
+
+.pages-container
+{
+    
+}
+
+.page-preview
+{
+   width: 150px; 
+   height:150px;   
+    display:inline-block;
+    margin:2%;
+    background:#818181;
+    padding:0.5%;
+    border:dashed;
+    border-radius:10px;
+}
+
+.page-preview .img-responsive{   
+  max-height:100%;  
+
+}
+
