--- a/ubakip/Views/Shared/MedalPartial.cshtml
+++ b/ubakip/Views/Shared/MedalPartial.cshtml
@@ -1,8 +1,5 @@
 ﻿@model ubakip.Models.Medal
 
 <div class="medal">
-    <img src=@Model.Photo alt=@Model.Description />
-    <md-tooltip>
-       @Model.Description
-    </md-tooltip>
+    <img src=@Model.Photo alt=@Model.Description data-toggle="tooltip" data-placement="bottom" title=@Model.Description/>        
 </div>
