--- a/ubakip/Views/Shared/_Layout.cshtml
+++ b/ubakip/Views/Shared/_Layout.cshtml
@@ -9,11 +9,12 @@
     @Scripts.Render("~/bundles/angular")    
     <link href="~/Content/custom.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/rating.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/nonbootstrap.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <script src="http://rubaxa.github.io/Sortable/Sortable.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
 </head>
-<body ng-app="">
+<body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
