--- a/ubakip/Views/Shared/_Layout.cshtml
+++ b/ubakip/Views/Shared/_Layout.cshtml
@@ -6,12 +6,14 @@
     <title>@ViewBag.Title - Ubakip.ru</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>@*before Angular*@   
+    <script src="~/Scripts/jquery-ui.min.js"></script>
     @Scripts.Render("~/bundles/angular")    
     <link href="~/Content/custom.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/rating.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <script src="http://rubaxa.github.io/Sortable/Sortable.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    
 
 </head>
 <body>
