--- a/ubakip/Content/custom.css
+++ b/ubakip/Content/custom.css
@@ -248,9 +248,7 @@ div.user-rating
 
 .pages-container
 {
-    display:inline-block;
-    margin:2%;
-    background:red;
+    width:100%;   
 }
 
 .page-preview
@@ -258,10 +256,12 @@ div.user-rating
    width: 150px; 
    height:150px;   
     display:inline-block;
-    margin:2%;
+    margin:1%;
+    margin-bottom:0px;
     background:#818181;
     padding:0.5%;
     border:dashed;
+    border-radius:5px;
 }
 
 .page-preview .img-responsive{   
