--- a/ubakip/Views/Shared/_Layout.cshtml
+++ b/ubakip/Views/Shared/_Layout.cshtml
@@ -6,11 +6,16 @@
     <title>@ViewBag.Title - Ubakip.ru</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/interact")
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>@*before Angular*@   
     <script src="~/Scripts/jquery-ui.min.js"></script>
-    @Scripts.Render("~/bundles/angular")    
+    @Scripts.Render("~/bundles/angular")   
+
+    <script src="~/Scripts/rzslider.min.js"></script>
     <link href="~/Content/custom.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/rating.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/slider.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/rzslider.min.css" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <script src="http://rubaxa.github.io/Sortable/Sortable.js"></script>
     
@@ -32,6 +37,7 @@
                     <li>@Html.ActionLink("New", "Index", "Home")</li>
                     <li>@Html.ActionLink("Popular", "Index", "Home")</li>
                     <li>@Html.ActionLink("Comics", "ComicsView", "Home")</li>
+                    <li>@Html.ActionLink("ComicsMaker", "ComicsMaker", "Home")</li>
                     <li>@Html.ActionLink("User", "UserInfo", "Home")</li>
                     <li><form action="" class="search-form">
     <div class="form-group has-feedback">
