--- a/ubakip/Views/Home/ComicsMaker.cshtml
+++ b/ubakip/Views/Home/ComicsMaker.cshtml
@@ -32,9 +32,8 @@ d3:<input id="d3" /> d4:<input id="d4" /><br />
     </div>
     <div class="col-md-4" >
         <script src="~/Scripts/slider.js"></script>
-
-        <rzslider rz-slider-model="sliderRotate.value" rz-slider-options="sliderRotate.options"></rzslider>
-        <rzslider rz-slider-model="sliderScale.value" rz-slider-options="sliderScale.options"></rzslider>        
+        <div class="con"><div id="slider_rotate" class="slider"></div></div>
+        <div class="con"><div id="slider_scale" class="slider"></div></div>
     </div>
 </div>
 
