--- a/ubakip/Content/slider.css
+++ b/ubakip/Content/slider.css
@@ -177,3 +177,28 @@ clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
     background: #afa;
     border-color: #0f0;
 }
+
+.cloud
+{
+    position:absolute;
+    z-index:15;
+    height:20%;
+    width:20%;   
+    overflow:hidden;
+    background:transparent;
+
+}
+.cloud textarea
+{
+    height:100%;
+    width:100%; 
+    padding:20%;
+    min-height:100%;
+    min-width:100%;  
+     max-height:100%;
+    max-width:100%; 
+        border-color:transparent;
+        outline: 0 none;
+     -webkit-mask-box-image: url("/Content/Images/Cartoon_Cloud1.svg.png") 35 repeat;
+  mask-border: url("/Content/Images/Cartoon_Cloud1.svg.png") 35 repeat;
+}
