--- a/ubakip/Views/Home/ComicsMaker.cshtml
+++ b/ubakip/Views/Home/ComicsMaker.cshtml
@@ -7,7 +7,7 @@
 <div class="row" ng-controller="comicsMakerController" ng-cloak="" ng-app="MyApp">
     <div class="col-md-8">
         <div class="wrapper">
-            <div class="main-form center-block" id="222">
+            <div class="main-form center-block" id="main-form">
                 <div class="square cell" id="sq1">
                 </div>
                 <div class="square cell" id="sq2"></div>
@@ -17,9 +17,13 @@
     </div>
     <div class="col-md-4" >
         <script src="~/Scripts/slider.js"></script>
+       
+        <button type="button" class="btn  btn-block btn-success" style="">Add cloud</button>
         <div class="con"><div id="slider_rotate" class="slider"></div></div>
         <div class="con"><div id="slider_scale" class="slider"></div></div>
     </div>
 </div>
 
+<script type="text/javascript">
 
+</script> 
