--- a/ubakip/Content/slider.css
+++ b/ubakip/Content/slider.css
@@ -2,13 +2,13 @@
 .slider {
   position: relative;
   width: 100%;
-  height: 1em;
-  margin: 1.5em auto;
+  height: 0.2em;
+  margin: 3em auto;
   background-color: #29e;
-  border-radius: 0.5em;
+  border-radius: 0.1em;
   box-sizing: border-box;
   
-  font-size: 8vmin;
+  font-size: 3vmin;
   
   -ms-touch-action: none;
       touch-action: none;
@@ -21,10 +21,10 @@
   position: relative;
   top: -0.5em;
 
-  width: 2em;
-  height: 2em;
-  margin-left: -1em;
-  border: solid 0.25em #fff;
+  width: 1em;
+  height: 1em;
+  margin-left: -0.5em;
+  border: solid 0.25em transparent;
   border-radius: 1em;
   background-color: inherit;
 
@@ -41,67 +41,34 @@
   margin-left: -1em;
   text-align: center;
 }
+
 .con { 
     width:90%;
     margin:auto;
-     }
-.test {
-  position: relative;
-  overflow: hidden;
-  width: 400px;
-    height: 400px;
-    position:static;
-    overflow:hidden;
-    border: 3px solid #73AD21;
-    border-radius: 10px;
-    margin: 100px;   
-    background:red;
-      -webkit-mask-image: url(http://tympanus.net/codrops-playground/assets/images/cssref/properties/mask-image/mask-image.png);
-  mask-image: url(http://tympanus.net/codrops-playground/assets/images/cssref/properties/mask-image/mask-image.png);
-  -webkit-mask-position: center center;
-  mask-position: center center;
-  /*-webkit-mask-repeat: no-repeat;*/
-  /*mask-repeat: no-repeat;*/
-    /*-webkit-clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
-clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
-    -webkit-clip-path: url("#clip-svg-demo");
-    clip-path: url("#clip-svg-demo");*/
-}
-
-.tt
-{
-    height: 100%;
-    width:100%;
-    background:green;
 }
 
 
 
-.imagetest
+.image-cell
 {
     width: auto;
     height: auto;
    
 }
 
-.imagetest2
+.tools-container
 {
-    position: relative;
-    width: 50%; 
-    height:auto;   
-    left: 2.5%;
-    top: 2.5%;
-    -webkit-clip-path: polygon(0% 0%, 30% 0%, 100% 100%, 0% 100%);
-    clip-path: polygon(0% 0%, 30% 0%, 100% 100%, 0% 100%);
-    /*-ms-transform: matrix(0.5,0, 0, 0.5, -0.5, 0); 
-    -webkit-transform: matrix(0.5,0, 0, 0.5, -0.5, 0);
-    transform: matrix(0.5,0, 0, 0.5, -0.5, 0);*/
+    padding:5%;    
+    border:dashed;
+    border-color:black;
+    border-radius:10px;
 }
-.imagetest2:hover
+
+.margin-auto
 {
-   border:dotted;   
-   border-color:yellow;
+     margin:5%; 
 }
+
 .wrapper {
   width: 80%;
   margin: 0 auto; 
@@ -121,10 +88,7 @@ clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
     bottom: 0;
     right: 0;
     left: 0;   
-    overflow:hidden;
-    background:black;    
-    border:solid;
-    border-color:red;    
+    overflow:hidden;     
 }
 
 .square
@@ -136,12 +100,7 @@ clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
     height:45%;
     width:45%;
     overflow:hidden; 
-    background:grey;
-}
-
-.square:hover
-{
-     background: blue;
+    background:transparent;
 }
 
 .rectangle
@@ -163,42 +122,43 @@ clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
     background:red;
 }
 
-.square.hover {
-    background: #ddd;
-    border-color: #aaa;
-}
-
-.square.error {
-    background: #faa;
-    border-color: #f00;
-}
-
-.square.drop {
-    background: #afa;
-    border-color: #0f0;
-}
-
 .cloud
 {
     position:absolute;
-    z-index:15;
+    z-index:20;
     height:20%;
     width:20%;   
     overflow:hidden;
     background:transparent;
-
 }
 .cloud textarea
 {
     height:100%;
     width:100%; 
     padding:20%;
+    padding-right:0%;
     min-height:100%;
     min-width:100%;  
      max-height:100%;
     max-width:100%; 
+    font-size: 2vmin;
         border-color:transparent;
         outline: 0 none;
-     -webkit-mask-box-image: url("/Content/Images/Cartoon_Cloud1.svg.png") 35 repeat;
-  mask-border: url("/Content/Images/Cartoon_Cloud1.svg.png") 35 repeat;
+     /*-webkit-mask-box-image: url("Images/cloud3.png") ;
+  mask-border: url("Images/cloud3.png") ;*/
+}
+
+
+.btn-cloud {
+  width: 20%;
+  margin: 1%; 
+  background-repeat:no-repeat;
+  background-size: 70%;  
+  background-position: center;
+  position: relative; 
+}
+.btn-cloud:after {
+  padding-top: 100%;   
+  display: inline-block; 
+  content: '';
 }
