--- a/ubakip/Views/Home/ComicsMaker.cshtml
+++ b/ubakip/Views/Home/ComicsMaker.cshtml
@@ -3,11 +3,19 @@
     ViewBag.Title = "ComicsMaker";
 }
 @Scripts.Render("~/bundles/interact")
-<script src="~/Scripts/rzslider.min.js"></script>
-<div class="row" ng-controller="comicsMakerController" ng-cloak="" ng-app="MyApp">
+<script src="~/Scripts/slider.js"></script>
+<script src="~/Scripts/jscolor.min.js"></script>
+@*<link rel="stylesheet" href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css" />*@
+
+ <script>
+
+</script>
+
+<button id="add">Create new user</button>
+<div class="row margin-auto" ng-controller="comicsMakerController" ng-cloak="" ng-app="MyApp">
     <div class="col-md-8">
         <div class="wrapper">
-            <div class="main-form center-block" id="main-form">
+            <div class="main-form center-block" id="main-form" style="background:#{{background}}">
                 <div class="square cell" id="sq1">
                 </div>
                 <div class="square cell" id="sq2"></div>
@@ -16,14 +24,18 @@
         </div>
     </div>
     <div class="col-md-4" >
-        <script src="~/Scripts/slider.js"></script>
-       
-        <button type="button" class="btn  btn-block btn-success" style="">Add cloud</button>
-        <div class="con"><div id="slider_rotate" class="slider"></div></div>
-        <div class="con"><div id="slider_scale" class="slider"></div></div>
+        <div class="tools-container">
+            <button type="button" id="save" class="btn  btn-block btn-success" style="">Save</button>
+            <button type="button" id="cloud1" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud1.png)"></button>
+            <button type="button" id="cloud2" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud2.png)"></button>
+            <button type="button" id="cloud3" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud3.png)"></button>
+            <button type="button" id="cloud4" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud4.png)"></button>
+            <button type="button" id="cloud5" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud5.png)"></button>
+            <button type="button" id="cloud6" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud6.png)"></button>
+            <button type="button" id="cloud7" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud7.png)"></button><br>
+            <span> Background color: <input class="jscolor" ng-model="background"></span>
+            <div class="con"><div id="slider_rotate" class="slider"></div></div>
+            <div class="con"><div id="slider_scale" class="slider"></div></div>
+        </div>  
     </div>
 </div>
-
-<script type="text/javascript">
-
-</script> 
