--- a/ubakip/Views/Home/ComicsMaker.cshtml
+++ b/ubakip/Views/Home/ComicsMaker.cshtml
@@ -11,21 +11,21 @@
 
 </script>
 
-<button id="add">Create new user</button>
+
 <div class="row margin-auto" ng-controller="comicsMakerController" ng-cloak="" ng-app="MyApp">
     <div class="col-md-8">
         <div class="wrapper">
             <div class="main-form center-block" id="main-form" style="background:#{{background}}">
-                <div class="square cell" id="sq1">
-                </div>
-                <div class="square cell" id="sq2"></div>
-                <div class="rectangle cell" id="sq3"></div>
             </div>
         </div>
     </div>
     <div class="col-md-4" >
         <div class="tools-container">
             <button type="button" id="save" class="btn  btn-block btn-success" style="">Save</button>
+            <button type="button" id="template1" class="btn btn-template" style="">T1</button>
+            <button type="button" id="template2" class="btn btn-template" style="">T2</button>
+            <button type="button" id="template3" class="btn btn-template" style="">T3</button>
+            <button type="button" id="template4" class="btn btn-template" style="">T4</button>
             <button type="button" id="cloud1" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud1.png)"></button>
             <button type="button" id="cloud2" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud2.png)"></button>
             <button type="button" id="cloud3" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud3.png)"></button>
