add clip-path layout

--- a/ubakip/Content/slider.css
+++ b/ubakip/Content/slider.css
@@ -103,24 +103,67 @@
     background:transparent;
 }
 
+.skew1
+{
+    position:absolute;
+    top:0;
+    width:100%;
+    height:60%;
+    overflow:hidden; 
+   -webkit-clip-path: polygon(2% 2%, 98% 2%, 98% 92%, 2% 72%);
+clip-path: polygon(2% 2%, 98% 2%, 98% 92%, 2% 72%);
+}
+
+.unskew1
+{
+    height:120%;
+    width:100%;
+    -webkit-clip-path: polygon(2% 2%, 98% 2%, 98% 92%, 2% 72%);
+clip-path: polygon(2% 2%, 98% 2%, 98% 92%, 2% 72%);
+
+}
+
+.skew2
+{position:absolute;
+    bottom:0;
+    width:100%;
+    height:60%;
+    overflow:hidden;  
+    -webkit-clip-path: polygon(2% 8%, 98% 28%, 98% 98%, 2% 98%);
+clip-path: polygon(2% 8%, 98% 28%, 98% 98%, 2% 98%);
+}
+
+.unskew2
+{
+    height:100%;
+    width:100%;
+    -webkit-clip-path: polygon(2% 8%, 98% 28%, 98% 98%, 2% 98%);
+clip-path: polygon(2% 8%, 98% 28%, 98% 98%, 2% 98%);
+
+}
+
 .rectangle
 {
-    height:44%;
-    width:93.4%;
+    
     position:relative;
-    margin-left: 3.3%;
-    margin-top: 3.3%;
+    
     float: left;
     overflow:hidden;
-    background: grey;
 }
-.clip
+
+.rect{
+    height:44%;
+    width:93.4%;
+    margin-left: 3.3%;
+    margin-top: 3.3%;
+}
+/*.clip
 {
     height:100%;
     width:100%;
     opacity:0;
     background:red;
-}
+}*/
 
 .cloud
 {
@@ -157,6 +200,7 @@
   background-position: center;
   position: relative; 
 }
+
 .btn-cloud:after {
   padding-top: 100%;   
   display: inline-block; 
