--- a/ubakip/Views/Shared/templates/template2.cshtml
+++ b/ubakip/Views/Shared/templates/template2.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="rectangle cell" id="sq3"></div>
+﻿<div class="rectangle rect cell" id="sq3"></div>
 <div class="square cell" id="sq1"></div>
 <div class="square cell" id="sq2"></div>
 
