add all templates

--- a/ubakip/Views/Home/ComicsMaker.cshtml
+++ b/ubakip/Views/Home/ComicsMaker.cshtml
@@ -22,11 +22,16 @@
     <div class="col-md-4" >
         <div class="tools-container">
             <button type="button" id="save" class="btn  btn-block btn-success" style="">Save</button>
-            <button type="button" id="template1" class="btn btn-template" style="">T1</button>
-            <button type="button" id="template2" class="btn btn-template" style="">T2</button>
-            <button type="button" id="template3" class="btn btn-template" style="">T3</button>
-            <button type="button" id="template4" class="btn btn-template" style="">T4</button>
+            <span>Layouts:</span><br />
+            <button type="button" id="template1" class="btn btn-template" style="background-image:url(../../Content/Images/template1.jpg)"></button>
+            <button type="button" id="template2" class="btn btn-template" style="background-image:url(../../Content/Images/template2.jpg)"></button>
+            <button type="button" id="template3" class="btn btn-template" style="background-image:url(../../Content/Images/template3.jpg)"></button>
+            <button type="button" id="template4" class="btn btn-template" style="background-image:url(../../Content/Images/template4.jpg)"></button>
+            <button type="button" id="template5" class="btn btn-template" style="background-image:url(../../Content/Images/template5.jpg)"></button>
+            <button type="button" id="template6" class="btn btn-template" style="background-image:url(../../Content/Images/template6.jpg)"></button>
+            <button type="button" id="template7" class="btn btn-template" style="background-image:url(../../Content/Images/template7.jpg)"></button>
             <br />
+            <span>Clouds:</span><br />
             <button type="button" id="cloud1" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud1.png)"></button>
             <button type="button" id="cloud2" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud2.png)"></button>
             <button type="button" id="cloud3" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud3.png)"></button>
