--- a/ubakip/Content/slider.css
+++ b/ubakip/Content/slider.css
@@ -91,6 +91,19 @@
     overflow:hidden;     
 }
 
+.background-cell
+{
+
+ display: block;
+    margin:auto; 
+}
+
+.background-div
+{
+    width:100%;
+    height:100%;
+    background:#858585;
+}
 .square
 {
     position:relative;
@@ -143,10 +156,8 @@ clip-path: polygon(2% 8%, 98% 28%, 98% 98%, 2% 98%);
 }
 
 .rectangle
-{
-    
-    position:relative;
-    
+{    
+    position:relative;    
     float: left;
     overflow:hidden;
 }
@@ -157,13 +168,13 @@ clip-path: polygon(2% 8%, 98% 28%, 98% 98%, 2% 98%);
     margin-left: 3.3%;
     margin-top: 3.3%;
 }
-/*.clip
-{
-    height:100%;
-    width:100%;
-    opacity:0;
-    background:red;
-}*/
+
+.rect-vertical{
+    width:44%;
+    height:93.4%;
+    margin-left: 3.3%;
+    margin-top: 3.3%;
+}
 
 .cloud
 {
@@ -187,12 +198,10 @@ clip-path: polygon(2% 8%, 98% 28%, 98% 98%, 2% 98%);
     font-size: 2vmin;
         border-color:transparent;
         outline: 0 none;
-     /*-webkit-mask-box-image: url("Images/cloud3.png") ;
-  mask-border: url("Images/cloud3.png") ;*/
 }
 
 
-.btn-cloud {
+.btn-cloud, .btn-template {
   width: 20%;
   margin: 1%; 
   background-repeat:no-repeat;
@@ -201,8 +210,10 @@ clip-path: polygon(2% 8%, 98% 28%, 98% 98%, 2% 98%);
   position: relative; 
 }
 
-.btn-cloud:after {
+.btn-cloud:after, .btn-template:after {
   padding-top: 100%;   
   display: inline-block; 
   content: '';
 }
+
+
