--- a/ubakip/Views/Shared/_Layout.cshtml
+++ b/ubakip/Views/Shared/_Layout.cshtml
@@ -6,12 +6,15 @@
     <title>@ViewBag.Title - Ubakip.ru</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>@*before Angular*@   
+    @Scripts.Render("~/bundles/jquery")
     <script src="~/Scripts/jquery-ui.min.js"></script>
-    @Scripts.Render("~/bundles/angular")   
-
+    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>*@@*before Angular*@   
   
+    @Scripts.Render("~/bundles/angular")   
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
     <link href="~/Content/custom.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/rating.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/slider.css" rel="stylesheet" type="text/css" />
