--- a/ubakip/Views/Home/ComicsMaker.cshtml
+++ b/ubakip/Views/Home/ComicsMaker.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "ComicsMaker";
 }
 @Scripts.Render("~/bundles/interact")
+<script src="~/Scripts/ngDialog.min.js"></script>
 <script src="~/Scripts/slider.js"></script>
 <script src="~/Scripts/jscolor.min.js"></script>
 
@@ -34,6 +35,7 @@
             <button type="button" id="cloud6" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud6.png)"></button>
             <button type="button" id="cloud7" class="btn btn-cloud" style="background-image:url(../../Content/Images/cloud7.png)"></button><br>
             <span> Background color: <input class="jscolor" ng-model="background"></span>
+            {{url}}
             <div class="con"><div id="slider_rotate" class="slider"></div></div>
             <div class="con"><div id="slider_scale" class="slider"></div></div>
         </div>  
