--- a/ubakip/Views/Shared/_Layout.cshtml
+++ b/ubakip/Views/Shared/_Layout.cshtml
@@ -11,14 +11,12 @@
     @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>*@@*before Angular*@   
   
     @Scripts.Render("~/bundles/angular")   
-    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+
     <link href="~/Content/custom.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/rating.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/slider.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="~/Content/rzslider.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/ngDialog-theme-default.min.css" />
+    <link rel="stylesheet" type="text/css" href="~/Content/ngDialog.min.css" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css"
           href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/themes/base/jquery-ui.css" />
